--- a/package.json
+++ b/package.json
@@ -13,5 +13,9 @@
     "concurrently": "^7.0.0",
     "webpack": "^5.0.0",
     "webpack-cli": "^4.0.0"
+  },
+  "dependencies": {
+    "jquery": "^3.7.1",
+    "slick-carousel": "^1.8.1"
   }
 }
