--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "projekt",
   "version": "1.0.0",
   "scripts": {
-    "build-sass": "sass src/index.scss dist/style.css",
-    "watch-sass": "sass --watch src/index.scss:dist/style.css",
+    "build-sass": "sass src/styles/index.scss dist/style.css",
+    "watch-sass": "sass --watch src/styles/index.scss:dist/style.css",
     "build-js": "webpack",
     "watch-js": "webpack --watch",
     "watch": "concurrently \"npm run watch-sass\" \"npm run watch-js\""
@@ -13,5 +13,9 @@
     "concurrently": "^7.0.0",
     "webpack": "^5.0.0",
     "webpack-cli": "^4.0.0"
+  },
+  "dependencies": {
+    "jquery": "^3.7.1",
+    "slick-carousel": "^1.8.1"
   }
 }
