--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "projekt",
   "version": "1.0.0",
   "scripts": {
-    "build-sass": "sass src/styles/index.scss dist/style.css",
-    "watch-sass": "sass --watch src/styles/index.scss:dist/style.css",
+    "build-sass": "sass src/styles/index.scss assets/js/style.css",
+    "watch-sass": "sass --watch src/styles/index.scss:assets/css/style.css",
     "build-js": "webpack",
     "watch-js": "webpack --watch",
     "watch": "concurrently \"npm run watch-sass\" \"npm run watch-js\""
