--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "webpack-cli": "^4.0.0"
   },
   "dependencies": {
+    "aos": "^2.3.4",
     "jquery": "^3.7.1",
     "slick-carousel": "^1.8.1"
   }
